testsuite/bsc.typechecker/bound-type-vars/BVB.bs
package BVB where

g :: r -> Bool
g x = to x
